# image-dedup

./: .dropboxignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dedup_engine.py  dedup_gui.py  pyproject.toml  requirements.txt
.claude/agents/: crate-sync-checker.md
.claude/skills/sync-algorithm/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
docs/future features/: README.md
frontend/: index.html  main.js  style.css
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: test_decompression_bomb.py  test_phash_collision.py
