[package]
name = "dedup_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "dedup_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
rayon = "1.10"
walkdir = "2.5"
md-5 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
