[package]
name = "image-dedup"
version = "1.0.0"
edition = "2021"

[lib]
name = "image_dedup_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
rayon = "1.10"
walkdir = "2.5"
md-5 = "0.10"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "sync"] }

[profile.release]
opt-level = 3
lto = true
strip = true
